# godot-cpp-tests

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: godot-dev-configuration.cmake
enc_temp_folder/d4a71a9547cf5b3f11a15f29b9a5efb2/: main.cpp
project/: AudioPlayer.tscn  Scene.tscn  default_bus_layout.tres  export_presets.cfg  godot-cpp-tests.gdextension  godot-cpp-tests.gdextension.uid  icon.svg.import  main_menu_theme.ogg.import  project.godot  some_resource.gd  some_resource.gd.uid
project/.godot/: extension_list.cfg  global_script_class_cache.cfg
project/.godot/editor/: Scene.tscn-editstate-3cab41165a348c17a420ee01df8f6c79.cfg  create_recent.Node  editor_layout.cfg  editor_script_doc_cache.res  filesystem_cache10  filesystem_cache8  filesystem_update4  pointer_referencing.tscn-editstate-a0dd57460794957b30aa5549d675dc75.cfg  project_metadata.cfg  recent_dirs  script_editor_cache.cfg  test-file-access.tscn-editstate-149b6a73e41b0a6b334209da1bd17edd.cfg  test-file-access.tscn-folding-149b6a73e41b0a6b334209da1bd17edd.cfg
project/.godot/exported/133200997/: export-149b6a73e41b0a6b334209da1bd17edd-test-file-access.scn  export-3cab41165a348c17a420ee01df8f6c79-Scene.scn  file_cache
project/.godot/imported/: main_menu_theme.ogg-adce6d1c5da7624fd4c605b3741f8368.md5  main_menu_theme.ogg-adce6d1c5da7624fd4c605b3741f8368.oggvorbisstr
project/file-access/: Scene.tscn  pointer_referencing.tscn  tesA89F.tmp  test-file-access.gd  test-file-access.tscn
project_export/: file_access_test.pck
src/: Main.cpp  Main.hpp  calling_class.cpp  calling_class.hpp  main.cpp  main.hpp
src/api/: extension _interface.cpp  extension_interface.hpp
src/core/: assert.hpp  concepts.hpp  function_traits.hpp
src/systems/: audio_player.cpp  audio_player.hpp
src/util/: bind.hpp  conversions.hpp  engine.hpp  variant.hpp
